Problem 60, Java, iteration 1