@@ -1,10 +1,9 @@
 package com.github.speisz.euler.math;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collection;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.LongStream;
 import java.util.stream.Stream;
 
@@ -19,7 +18,7 @@ public class Permutations {
         return permutationHelper(number, new LinkedList<>(items), new ArrayList<>());
     }
 
-    private static <T> List<T> permutationHelper(long number, LinkedList<T> in, List<T> out) {
+    private static <T> List<T> permutationHelper(long number, List<T> in, List<T> out) {
         if (in.isEmpty()) {
             return out;
         }
@@ -28,19 +27,35 @@ public class Permutations {
         return permutationHelper((int) (number % subFactorial), in, out);
     }
 
-    private static <T> void move(int index, LinkedList<T> from, List<T> to) {
+    private static <T> void move(int index, List<T> from, List<T> to) {
         to.add(from.get(index));
         from.remove(index);
     }
 
     @SafeVarargs
-    @SuppressWarnings("varargs")
-    public static <T> Stream<Stream<T>> of(T... items) {
-        return of(Arrays.asList(requireNonNull(items)));
+    public static <T> Stream<Stream<T>> streamsOf(T... items) {
+        return streamsOf(List.of(requireNonNull(items)));
     }
 
-    private static <T> Stream<Stream<T>> of(List<T> items) {
+    public static <T> Stream<Stream<T>> streamsOf(List<T> items) {
+        return Permutations.of(items).map(Collection::stream);
+    }
+
+    @SafeVarargs
+    public static <T> Stream<List<T>> of(T... items) {
+        return of(List.of(requireNonNull(items)));
+    }
+
+    public static <T> Stream<List<T>> of(Collection<T> items) {
         return LongStream.range(0, Factorial.asIntegerOf(items.size()))
-                .mapToObj(number -> permutation(number, items).stream());
+                .mapToObj(number -> permutation(number, List.copyOf(items)));
+    }
+
+    public static <T> Stream<Stream<T>> streamsOfLengthTwo(Collection<T> items) {
+        return items.stream()
+                .flatMap(item -> items.stream()
+                        .filter(innerItem -> item != innerItem)
+                        .map(innerItem -> Stream.of(item, innerItem)))
+                .distinct();
     }
 }
